Automatically backed up by Learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -11,7 +11,7 @@
   <br />
   <%= f.label :inventory %>
   <%= f.text_field :inventory %>
-  <%= f.submit %>
+  <%= f.submit "submit"%>
   
 <div id="productResult">
   <h2 id="productName"></h2>
